# ST_Free

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.c  test.ll
docs/html/: _arg_list_8cpp.html  _arg_list_8cpp__incl.map  _arg_list_8cpp__incl.md5  _arg_list_8hpp.html  _arg_list_8hpp__dep__incl.map  _arg_list_8hpp__dep__incl.md5  _arg_list_8hpp__incl.map  _arg_list_8hpp__incl.md5  _arg_list_8hpp_source.html  _b_b_worklist_8cpp.html  _b_b_worklist_8cpp__incl.map  _b_b_worklist_8cpp__incl.md5  _b_b_worklist_8hpp.html  _b_b_worklist_8hpp__dep__incl.map  _b_b_worklist_8hpp__dep__incl.md5  _b_b_worklist_8hpp__incl.map  _b_b_worklist_8hpp__incl.md5  _b_b_worklist_8hpp_source.html  _base_analyzer_8cpp.html  _base_analyzer_8cpp__incl.map  _base_analyzer_8cpp__incl.md5  _base_analyzer_8hpp.html  _base_analyzer_8hpp__dep__incl.map  _base_analyzer_8hpp__dep__incl.md5  _base_analyzer_8hpp__incl.map  _base_analyzer_8hpp__incl.md5  _base_analyzer_8hpp_source.html  _connection_manager_8cpp.html  _connection_manager_8cpp__incl.map  _connection_manager_8cpp__incl.md5  _connection_manager_8hpp.html  _connection_manager_8hpp__dep__incl.map  _connection_manager_8hpp__dep__incl.md5  _connection_manager_8hpp__incl.map  _connection_manager_8hpp__incl.md5  _connection_manager_8hpp_source.html  _function_manager_8cpp.html  _function_manager_8cpp__incl.map  _function_manager_8cpp__incl.md5  _function_manager_8hpp.html  (+675 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  (+50 more)
docs/latex/: _arg_list_8cpp.tex  _arg_list_8cpp__incl.md5  _arg_list_8hpp.tex  _arg_list_8hpp__dep__incl.md5  _arg_list_8hpp__incl.md5  _b_b_worklist_8cpp.tex  _b_b_worklist_8cpp__incl.md5  _b_b_worklist_8hpp.tex  _b_b_worklist_8hpp__dep__incl.md5  _b_b_worklist_8hpp__incl.md5  _base_analyzer_8cpp.tex  _base_analyzer_8cpp__incl.md5  _base_analyzer_8hpp.tex  _base_analyzer_8hpp__dep__incl.md5  _base_analyzer_8hpp__incl.md5  _connection_manager_8cpp.tex  _connection_manager_8cpp__incl.md5  _connection_manager_8hpp.tex  _connection_manager_8hpp__dep__incl.md5  _connection_manager_8hpp__incl.md5  _function_manager_8cpp.tex  _function_manager_8cpp__incl.md5  _function_manager_8hpp.tex  _function_manager_8hpp__dep__incl.md5  _function_manager_8hpp__incl.md5  _loop_manager_8cpp.tex  _loop_manager_8cpp__incl.md5  _loop_manager_8hpp.tex  _loop_manager_8hpp__dep__incl.md5  _loop_manager_8hpp__incl.md5  _relationship_information_8cpp.tex  _relationship_information_8cpp__incl.md5  _relationship_information_8hpp.tex  _relationship_information_8hpp__dep__incl.md5  _relationship_information_8hpp__incl.md5  _s_t__free_8cpp.tex  _s_t__free_8cpp__incl.md5  _s_t__free_8hpp.tex  _s_t__free_8hpp__dep__incl.md5  _s_t__free_8hpp__incl.md5  (+279 more)
st_free/: ArgList.cpp  BBWorklist.cpp  BaseAnalyzer.cpp  BasicBlockManager.cpp  CMakeLists.txt  ConnectionManager.cpp  FreedStruct.cpp  FunctionManager.cpp  LoopManager.cpp  RelationshipInformation.cpp  ST_free.cpp  ST_free.hpp  StageOneAnalyzer.cpp  StageTwoAnalyzer.cpp  StructInformation.cpp  StructMemberInformation.cpp  UniqueKeyManager.cpp  ValueInformation.cpp  analyzer.cpp  analyzer.hpp  argList.cpp  argList.hpp  determinator.cpp  determinator.hpp  functionManager.cpp  inter_analysis.cpp  inter_analysis.hpp  relationshipInformation.cpp  statList.cpp  statList.hpp  status_element.cpp  status_element.hpp  support_funcs.cpp  support_funcs.hpp
st_free/include/: ArgList.hpp  BBWorklist.hpp  BaseAnalyzer.hpp  BasicBlockManager.hpp  ConnectionManager.hpp  FreedStruct.hpp  FunctionManager.hpp  LoopManager.hpp  RelationshipInformation.hpp  ST_free.hpp  StageOneAnalyzer.hpp  StageTwoAnalyzer.hpp  StructInformation.hpp  StructMemberInformation.hpp  UniqueKeyManager.hpp  ValueInformation.hpp  analyzer.hpp  argList.hpp  determinator.hpp  functionManager.hpp  inter_analysis.hpp  relationshipInformation.hpp  statList.hpp  status_element.hpp  support_funcs.hpp
test_set/: Makefile  README.md  rename_src.py
test_set/StageOne/: Makefile
test_set/StageOne/src/: inter_prcedural_with_error_null_check.c  inter_procedural_callee_has_goto_error_handling.c  inter_procedural_error_handling_goto.c  inter_procedural_goto_multiple_return.c  inter_procedural_multiple_function_error_handling.c  inter_procedural_nested_static_struct.c  inter_procedural_ops_function_ptr.c  inter_procedural_pointer_pointer.c  inter_procedural_simple_goto.c  inter_procedural_simple_member_free.c  inter_procedural_stored_in_other_func.c  inter_procedural_struct_free.c  inter_procedural_struct_member_struct_mutiple_free.c  inter_procedural_with_null_checked_free.c  inter_procedural_with_null_struct_members_free.c  intra_procedural_looped_allocate.c  intra_procedural_multiple_function.c  intra_procedural_mutiple_free.c  intra_procedural_simple_goto.c  intra_procedural_simple_leak.c  intra_procedural_stored.c  intra_procedural_voided_store.c  intra_simple_local_var.c  test_1.c  test_10.c  test_11.c  test_13.c  test_15.c  test_16.c  test_17.c  test_18.c  test_19.c  test_2.c  test_20.c  test_22.c  test_23.c  (+17 more)
test_set/ir/: test.ll  test_2.ll  test_3.ll  test_4.ll  test_5.ll  test_6.ll  test_7.ll  test_8.ll  test_9.ll
test_set/src/: test.c  test_12.c  test_13.c  test_15.c  test_19.c  test_2.c  test_20.c  test_22.c  test_24.c  test_27.c  test_3.c  test_32.c  test_34.c  test_36.c  test_37.c  test_4.c  test_5.c  test_6.c  test_7.c
(+15 files in other folders)
